Fix navigation's folder behaviour on tablet/mobile

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -176,7 +176,6 @@ div.widget .extendednavigation ul.align-right {
                     /* Folder dropdown arrow BG style goes Here */
                     margin-right: 20px;
                     cursor: pointer;
-                    z-index: 600;
                     &:after {
                         top: 50%;
                             margin-top: -1px;
@@ -204,6 +203,7 @@ div.widget .extendednavigation ul.align-right {
                         padding: 0;
                         @media @tablet {
                             margin-top: 0px;
+                            max-width: 100%;
                         }
                         li {
                             a {
